bookmarks-popover: Don't snapshot URLs when creating new bookmark rows

https://bugzilla.gnome.org/show_bug.cgi?id=780549